--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@ h2 {
 }
 
 .card {
-  background:#7a0000;
-  padding:20px;
-  border-radius:18px;
-  text-align:center;
-  cursor:pointer;
+  background: linear-gradient(145deg, #8b0000, #5a0000);
+  padding: 25px;
+  border-radius: 22px;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 16px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+  transition: 0.2s;
+}
+
+.card:active {
+  transform: scale(0.97);
 }
 
 .product-card {
