--- a/index.html
+++ b/index.html
@@ -43,7 +43,24 @@ h2 {
   background:#2a2a2a;
   padding:15px;
   border-radius:15px;
-  margin-bottom:15px;
+}
+
+.qty-control{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:10px;
+  margin-top:10px;
+}
+
+.qty-control button{
+  width:35px;
+  height:35px;
+  border-radius:8px;
+  border:none;
+  background:#ff2d55;
+  color:white;
+  font-size:18px;
 }
 
 button {
@@ -116,17 +133,22 @@ function openCategory(category){
         <h3>${item.name}</h3>
         <p>${item.price} ₽</p>
         <div class="qty-control">
-  <button onclick="changeQty('${item.name}', ${item.price}, -1)">−</button>
-  <span>${getQty('${item.name}')}</span>
-  <button onclick="changeQty('${item.name}', ${item.price}, 1)">+</button>
-</div>
+          <button onclick="changeQty('${item.name}', ${item.price}, -1)">−</button>
+          <span>${getQty(item.name)}</span>
+          <button onclick="changeQty('${item.name}', ${item.price}, 1)">+</button>
+        </div>
+      </div>
     `;
   });
   
   html += `</div>`;
-  
   html += renderCartHTML();
   document.getElementById("main").innerHTML = html;
+}
+
+function getQty(name){
+  let item = cart.find(i => i.name === name);
+  return item ? item.qty : 0;
 }
 
 function changeQty(name, price, delta){
@@ -134,11 +156,9 @@ function changeQty(name, price, delta){
 
   if(existing){
     existing.qty += delta;
-
     if(existing.qty <= 0){
       cart = cart.filter(i => i.name !== name);
     }
-
   } else if(delta > 0){
     cart.push({name, price, qty:1});
   }
@@ -153,8 +173,8 @@ function renderCartHTML(){
   } else {
     let total = 0;
     cart.forEach(item=>{
-  html += `<p>${item.name} × ${item.qty} — ${item.price * item.qty} ₽</p>`;
-  total += item.price * item.qty;
+      html += `<p>${item.name} × ${item.qty} — ${item.price * item.qty} ₽</p>`;
+      total += item.price * item.qty;
     });
     html += `<hr>Итого: ${total} ₽`;
     html += `<br><button onclick="sendOrder()">Связаться с менеджером</button>`;
@@ -168,9 +188,9 @@ function sendOrder(){
   let total = 0;
 
   cart.forEach(item=>{
-  text += item.name + " × " + item.qty + " — " + (item.price * item.qty) + " ₽\n";
-  total += item.price * item.qty;
-});
+    text += item.name + " × " + item.qty + " — " + (item.price * item.qty) + " ₽\n";
+    total += item.price * item.qty;
+  });
 
   text += "\nИтого: " + total + " ₽";
 
