--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@ const products = {
   {
     name:"Duall",
     price:400,
-    image:"https://i.imgur.com/3ZQ3ZQH.png"
+    image:"euforic.png"
   },
   {
     name:"Podonki",
     price:450,
-    image:"https://i.imgur.com/3ZQ3ZQH.png"
+    image:"gorilla.png"
   }
 ],
   "POD-системы": [
