--- a/index.html
+++ b/index.html
@@ -34,6 +34,35 @@ body {
 h2 {
   margin-top:0;
 }
+  .grid {
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:15px;
+}
+
+.product-card {
+  background:#2a2a2a;
+  padding:15px;
+  border-radius:20px;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+  min-height:220px;
+}
+
+.product-card img{
+  width:100%;
+  border-radius:15px;
+  margin-bottom:10px;
+}
+
+.qty-control{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:10px;
+  margin-top:10px;
+}
 
 .grid {
   display:grid;
