--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ h2 {
   .grid {
   display:grid;
   grid-template-columns:1fr 1fr;
-  gap:15px;
+  gap:20px;
 }
 
 .product-card {
@@ -48,6 +48,7 @@ h2 {
   flex-direction:column;
   justify-content:space-between;
   min-height:220px;
+  margin-bottom:10px;
 }
 
 .product-card img{
