--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ box-sizing:border-box;
 
 .product-card img{
   width:100%;
+  height:140px;
+  object-fit:cover;
   border-radius:15px;
   margin-bottom:10px;
 }
