--- a/index.html
+++ b/index.html
@@ -174,10 +174,25 @@ const products = {
     {name:"Vaporesso", price:3000}
   ],
   "Съедобные товары": [
-    {name:"Маршмеллоу", price:300},
-    {name:"Жвачка", price:150}
-  ]
-};
+  {
+    name: "Browne",
+    price: 500,
+    image: "food/broune.png",
+    description: "Нежный шоколадный брауни с насыщенным вкусом."
+  },
+  {
+    name: "Cookie",
+    price: 450,
+    image: "food/cookie.png",
+    description: "Классическое печенье с мягкой текстурой и сладким ароматом."
+  },
+  {
+    name: "THC Cherry",
+    price: 550,
+    image: "food/thc_cherry.png",
+    description: "Вишнёвый десерт с ярким вкусом и лёгкой сладостью."
+  }
+],
 
   function updateCartBar(){
   let bar = document.getElementById("cartBar");
