--- a/index.html
+++ b/index.html
@@ -159,14 +159,54 @@ const products = {
   ],
   "Жидкости": [
   {
-    name:"Duall",
-    price:400,
-    image:"euforic.png"
+    name: "2780",
+    price: 400,
+    image: "liquids/2780.jpg"
   },
   {
-    name:"Podonki",
-    price:450,
-    image:"gorilla.png"
+    name: "2786",
+    price: 450,
+    image: "liquids/2786_1.jpg"
+  },
+  {
+    name: "2789",
+    price: 450,
+    image: "liquids/2789.jpg"
+  },
+  {
+    name: "Dosi Kush",
+    price: 500,
+    image: "liquids/dosi_kush.jpg"
+  },
+  {
+    name: "LCG",
+    price: 500,
+    image: "liquids/lcg.jpg"
+  },
+  {
+    name: "Mint",
+    price: 450,
+    image: "liquids/mint.jpg"
+  },
+  {
+    name: "OG Cush",
+    price: 500,
+    image: "liquids/ogcush.jpg"
+  },
+  {
+    name: "Original Z",
+    price: 500,
+    image: "liquids/original_z.jpg"
+  },
+  {
+    name: "Permanent Marker",
+    price: 550,
+    image: "liquids/permanent_marker.jpg"
+  },
+  {
+    name: "Super Lemon Haze",
+    price: 550,
+    image: "liquids/super_lemon_haze.jpg"
   }
 ],
   "POD-системы": [
