--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@ const products = {
     {name:"Voopoo", price:2500},
     {name:"Vaporesso", price:3000}
   ],
-  "Съедобные товары": [
+  "Съедобные товары": 
+    [
   {
     name: "Browne",
     price: 500,
