--- a/index.html
+++ b/index.html
@@ -209,10 +209,18 @@ const products = {
     image: "liquids/super_lemon_haze.jpg"
   }
 ],
-  "POD-системы": [
-    {name:"Voopoo", price:2500},
-    {name:"Vaporesso", price:3000}
-  ],
+ "POD-системы": [
+  {
+    name: "9 Pound Hammer",
+    price: 2500,
+    image: "pods/9poundhammer.png"
+  },
+  {
+    name: "Big Bad Bear",
+    price: 3000,
+    image: "pods/bigbadbear.png"
+  }
+],
   "Съедобные товары": 
     [
   {
