--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@ body {
 
 h2 { margin-top:0; }
 
-.grid {
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:20px;
-}
 
 .card {
   background: linear-gradient(145deg, #8b0000, #5a0000);
@@ -44,6 +39,41 @@ h2 { margin-top:0; }
   display:flex;
   flex-direction:column;
   justify-content:space-between;
+}
+  /* ===== КАТЕГОРИИ ===== */
+
+.grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.category-card{
+  background: linear-gradient(145deg, #8b0000, #5a0000);
+  border-radius:20px;
+  padding:20px;
+  text-align:center;
+  cursor:pointer;
+  transition:0.2s;
+  box-shadow:0 6px 18px rgba(0,0,0,0.4);
+}
+
+.category-card img{
+  width:120px;
+  height:120px;
+  object-fit:contain;
+  display:block;
+  margin:0 auto 10px;
+}
+
+.category-card:active{
+  transform:scale(0.96);
+}
+
+.category-title{
+  font-weight:bold;
+  font-size:15px;
 }
 
 .product-card img{
