--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ let cart = [];
 let currentCategory = null;
   
   const categoryImages = {
-  "Жидкости": "icons/икжик.png",
+  "Жидкости": "icons/икжиж.png",
   "POD-системы": "icons/под.png",
   "Съедобные товары": "icons/еда.png"
 };
