--- a/index.html
+++ b/index.html
@@ -50,21 +50,22 @@ h2 { margin-top:0; }
 }
 
 .category-card{
-  background: linear-gradient(145deg, #8b0000, #5a0000);
-  border-radius:20px;
-  padding:20px;
-  text-align:center;
-  cursor:pointer;
-  transition:0.2s;
-  box-shadow:0 6px 18px rgba(0,0,0,0.4);
-}
-
-.category-card img{
-  width:120px;
-  height:120px;
-  object-fit:contain;
-  display:block;
-  margin:0 auto 10px;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+  cursor: pointer;
+  height: 160px;
+  display: flex;
+  align-items: flex-end;
+  padding: 20px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: darken;
+background-color: rgba(0,0,0,0.4);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.5);
 }
 
 .category-card:active{
@@ -193,11 +194,12 @@ function renderCategories(){
 
   for(let category in products){
     html += `
-      <div class="category-card" onclick="openCategory('${category}')">
-        <img src="${categoryImages[category]}" alt="${category}">
-        <div class="category-title">${category}</div>
-      </div>
-    `;
+  <div class="category-card"
+       style="background-image:url('${categoryImages[category]}')"
+       onclick="openCategory('${category}')">
+    ${category}
+  </div>
+`;
   }
 
   html += "</div>";
