--- a/index.html
+++ b/index.html
@@ -165,6 +165,19 @@ button {
   transform: scale(1.3);
   opacity: 0.6;
 }
+  /* плавное появление карточек */
+.product-card {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeUp 0.4s ease forwards;
+}
+
+@keyframes fadeUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 </style>
 </head>
@@ -327,12 +340,11 @@ function renderCategoryContent(category){
   let html = `<button id="backBtn" onclick="renderCategories()">← Назад</button>`;
   html += `<h2>${category}</h2><div class="grid">`;
 
-  products[category].forEach(item => {
+  products[category].forEach((item, index) => {
     html += `
-      <div class="product-card" onclick="openProduct('${category}', '${item.name.replace(/'/g, "\\'")}')">
-        <img src="${item.image}">
-        <h3>${item.name}</h3>
-        <p>${item.price} ₽</p>
+      <div class="product-card"
+     style="animation-delay: ${index * 0.05}s"
+     onclick="openProduct('${category}', '${item.name.replace(/'/g, "\\'")}')">
 
         <div class="qty-control">
           <button class="qty-btn"
@@ -426,15 +438,13 @@ function changeQty(name, price, delta){
 
   updateCartBar();
 
-  // обновляем только цифру
-  const safeName = name.replace(/\s/g, '_');
+const safeName = name.replace(/\s/g, "_");
 const qtyEl = document.getElementById(`qty-${safeName}`);
-  if(qtyEl){
+if (qtyEl) {
     qtyEl.textContent = getQty(name);
     qtyEl.classList.remove("bump");
-    void qtyEl.offsetWidth; // перезапуск анимации
+    void qtyEl.offsetWidth;
     qtyEl.classList.add("bump");
-  }
 }
 
 function renderCart(){
