--- a/index.html
+++ b/index.html
@@ -162,8 +162,13 @@ button {
 }
 
 .qty-number.bump {
-  transform: scale(1.3);
-  opacity: 0.6;
+    animation: qtyPop 0.3s ease;
+}
+
+@keyframes qtyPop {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.4); }
+    100% { transform: scale(1); }
 }
   /* плавное появление карточек */
 .product-card {
@@ -181,11 +186,43 @@ button {
     transform: translateY(0);
   }
 }
+  #topBar {
+    position: fixed;
+    top: 10px;
+    right: 20px;
+    z-index: 1000;
+}
+
+#cartIcon {
+    background: #ff3b5c;
+    color: white;
+    padding: 8px 14px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+}
+
+#cartCount {
+    background: white;
+    color: #ff3b5c;
+    padding: 2px 8px;
+    border-radius: 50%;
+    font-size: 14px;
+}
 
 </style>
 </head>
 
 <body>
+  <div id="topBar">
+    <div id="cartIcon" onclick="renderCart()">
+        🛒 <span id="cartCount">0</span>
+    </div>
+</div>
 
 <div id="main"></div>
 <div id="cartBar"></div>
@@ -304,20 +341,26 @@ let currentCategory = null;
 };
 
 function updateCartBar(){
-  const bar = document.getElementById("cartBar");
+    const bar = document.getElementById("cartBar");
 
-  if(cart.length === 0){
-    bar.style.display = "none";
-    return;
-  }
+    if(cart.length === 0){
+        bar.style.display = "none";
+    } else {
+        let total = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
 
-  let total = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
+        bar.style.display = "flex";
+        bar.innerHTML = `
+            <div><b>${total} ₽</b></div>
+            <button onclick="renderCart()">Оформить</button>
+        `;
+    }
 
-  bar.style.display = "flex";
-  bar.innerHTML = `
-    <div><b>${total} ₽</b></div>
-    <button onclick="renderCart()">Оформить</button>
-  `;
+    const totalCount = cart.reduce((sum, item) => sum + item.qty, 0);
+    const cartCountEl = document.getElementById("cartCount");
+
+    if(cartCountEl){
+        cartCountEl.textContent = totalCount;
+    }
 }
 
 function renderCategories() {
