--- a/index.html
+++ b/index.html
@@ -213,6 +213,38 @@ button {
     border-radius: 50%;
     font-size: 14px;
 }
+  #cartIcon {
+    background: #ff3b5c;
+    color: white;
+    padding: 8px 14px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+    transition: transform 0.3s ease; /* Добавляем плавную анимацию */
+}
+
+#cartIcon.bump {
+    transform: scale(1.1); /* Увеличиваем иконку */
+}
+  #cartCount {
+    background: white;
+    color: #ff3b5c;
+    padding: 2px 8px;
+    border-radius: 50%;
+    font-size: 14px;
+    font-weight: bold;
+    display: inline-block;
+    transition: transform 0.2s ease, opacity 0.2s ease; /* Плавная анимация */
+}
+
+#cartCount.bump {
+    transform: scale(1.3); /* Увеличиваем счётчик */
+    opacity: 0.6; /* Немного уменьшаем прозрачность */
+}
 
 </style>
 </head>
@@ -340,7 +372,7 @@ let currentCategory = null;
 ]
 };
 
-function updateCartBar(){
+function updateCartBar() {
     const bar = document.getElementById("cartBar");
 
     if(cart.length === 0){
@@ -360,6 +392,15 @@ function updateCartBar(){
 
     if(cartCountEl){
         cartCountEl.textContent = totalCount;
+        cartCountEl.classList.remove("bump");  // Убираем старую анимацию
+        void cartCountEl.offsetWidth;  // Принудительно запускаем перерисовку
+        cartCountEl.classList.add("bump");  // Добавляем анимацию
+    }
+    
+    const cartIcon = document.getElementById("cartIcon");
+    if(cartIcon){
+        cartIcon.classList.add("bump");  // Добавляем анимацию на иконку
+        setTimeout(() => cartIcon.classList.remove("bump"), 300);  // Убираем анимацию через 300мс
     }
 }
 
